# Runner

./: .gitignore  CMakeLists.txt  Runner.sln  ios.cmake  mac.cmake
Runner/: ReadMe.txt  Resource.h  Runner.rc  Runner.vcxproj  Runner.vcxproj.filters  main.cpp  main.h
Runner/Classes/: AppDelegate.cpp  AppDelegate.h  B2DebugDrawLayer.cpp  B2DebugDrawLayer.h  Convert.cpp  Environment.cpp  Environment.h  GB2ShapeCacheX.cpp  GB2ShapeCacheX.h  GLESRender.cpp  GLESRender.h  GameObjectFactory.cpp  GameObjectFactory.h  GameWorld.cpp  GameWorld.h  HelloWorldScene.cpp  HelloWorldScene.h  IGameObject.h  SimpleGameObject.cpp  SimpleGameObject.h  TestScene.cpp  TestScene.h  VisibleRect.cpp  VisibleRect.h
Runner/Classes/GameObjects/: GameObjectComposer.cpp  GameObjectComposer.h  GameObjectFactory.cpp  IGameObject.h  SimpleGameObject.cpp
Runner/Classes/Utils/: Convert.h  Environment.cpp  Environment.h  MacroCreate.h
blender/: export.bat  export.sh
blender/files/: totems.blend
blender/scripts/: export.py  utils.py
config/: hero_animations.json
projects/ios/Runner/Runner/: AppController.mm  Info.plist  RootViewController.h  main.m
projects/ios/Runner/Runner.xcodeproj/: project.pbxproj
projects/mac/Runner/Runner/: Info.plist  main.mm
projects/mac/Runner/Runner.xcodeproj/: project.pbxproj
src/: AppDelegate.cpp  AppDelegate.h  AudioEngine.cpp  AudioEngine.h  ContactListener.cpp  ContactListener.h  DataBase.cpp  DataBase.h  DeathMenu.cpp  DeathMenu.h  DelayedDrop.cpp  DelayedDrop.h  DropController.cpp  DropController.h  GameCamera.cpp  GameCamera.h  GameScene.cpp  GameScene.h  GameSoundType.h  GameWorld.cpp  GameWorld.h  GenericScene.cpp  GenericScene.h  HeadUpDisplay.cpp  HeadUpDisplay.h  IGame.h  IUpdatable.h  MainMenuScene.cpp  MainMenuScene.h  PauseMenu.cpp  PauseMenu.h  SceneBuilder.cpp  SceneBuilder.h  SceneManager.cpp  SceneManager.h  TestScene.cpp  TestScene.h  UpdaterFunc.cpp  UpdaterFunc.h  UpdaterFunc.hpp  (+1 more)
src/AnimationEngine/: Animation.cpp  Animation.h  AnimationEngine.cpp  AnimationEngine.h  AnimationFactory.cpp  AnimationFactory.h  FrameId.h  IAnimation.h  IndexedAnimation.cpp  IndexedAnimation.h
src/B2DebugDraw/: B2DebugDrawLayer.cpp  B2DebugDrawLayer.h  GB2ShapeCacheX.cpp  GB2ShapeCacheX.h  GLESRender.cpp  GLESRender.h  VisibleRect.cpp  VisibleRect.h
src/ForceField/: Clamper.cpp  Clamper.h  FieldMixer.cpp  FieldMixer.h  ForceFieldDebugDraw.cpp  ForceFieldDebugDraw.h  ForceFieldFactory.cpp  ForceFieldFactory.h  GridForceField.cpp  GridForceField.h  IForceField.h  StaticForceField.cpp  StaticForceField.h
src/GUI/: Alignment.h  BorderdNode.cpp  BorderdNode.h  BoxLayout.cpp  BoxLayout.h  Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  ILayout.h  Image.cpp  Image.h  Label.cpp  Label.h  Orientation.h  Placer.cpp  Placer.h  ProgressBar.cpp  ProgressBar.h  ScalePolicy.h  UILayer.cpp  UILayer.h  View.cpp  View.h  ViewPort.cpp  ViewPort.h
src/GUI2/: Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  ProgressBar.cpp  ProgressBar.h
src/GameObjects/: AnimationObject.cpp  AnimationObject.h  Bomb.cpp  Bomb.h  BridgeColumn.cpp  BridgeColumn.h  Bulb.cpp  Bulb.h  Coin.cpp  Coin.h  CollisionCategory.h  GameLevelGenerator.cpp  GameLevelGenerator.h  GameObjectComposer.cpp  GameObjectComposer.h  GameObjectFactory.cpp  GameObjectFactory.h  GameObjectType.h  Grass.cpp  Grass.h  GroundStone.cpp  GroundStone.h  IGameLavelInfo.h  IGameObject.h  LightingStone.cpp  LightingStone.h  ObjectThemer.cpp  ObjectThemer.h  ParticlesObject.cpp  ParticlesObject.h  SimpleGameObject.cpp  SimpleGameObject.h  WallController.cpp  WallController.h  WallStone.cpp  WallStone.h
src/Hero/: AttackState.cpp  AttackState.h  DeadState.cpp  DeadState.h  FallState.cpp  FallState.h  Hero.cpp  Hero.h  HeroData.h  HeroStateId.h  IHeroState.h  JumpState.cpp  JumpState.h  RunState.cpp  RunState.h
src/Particles/: IParticlesCleaner.h  IParticlesReplacer.h  IParticlesUpdater.h  ISystemUpdater.h  Particle.cpp  Particle.h  ParticleGeneratorGroup.cpp  ParticleGeneratorGroup.h  ParticlesCleaner.cpp  ParticlesCleaner.h  ParticlesFactory.cpp  ParticlesFactory.h  ParticlesGenerator.cpp  ParticlesGenerator.h  ParticlesMover.cpp  ParticlesMover.h  ParticlesReplacer.cpp  ParticlesReplacer.h  ParticlesSystem.cpp  ParticlesSystem.h
src/Utils/: Cfg.cpp  Cfg.h  Environment.cpp  Environment.h  Forwards.h  ITimeProvider.h  MacroCreate.h  NodeUtils.cpp  NodeUtils.h  StrongPtr.h  TimeProvider.cpp  TimeProvider.h  b2Utils.cpp  b2Utils.h  b2Vec2Operators.h
