cmake_minimum_required (VERSION 2.8.11)
project (GameLib)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Werror")

set(sources 
	src/AnimationEngine/Animation.cpp
	src/AnimationEngine/Animation.h
	src/AnimationEngine/AnimationEngine.cpp
	src/AnimationEngine/AnimationEngine.h
	src/AnimationEngine/AnimationFactory.cpp
	src/AnimationEngine/AnimationFactory.h
	src/AnimationEngine/FrameId.h
	src/AnimationEngine/IAnimation.h
	src/AppDelegate.cpp
	src/AppDelegate.h
	src/B2DebugDraw/B2DebugDrawLayer.cpp
	src/B2DebugDraw/B2DebugDrawLayer.h
	src/B2DebugDraw/GB2ShapeCacheX.cpp
	src/B2DebugDraw/GB2ShapeCacheX.h
	src/B2DebugDraw/GLESRender.cpp
	src/B2DebugDraw/GLESRender.h
	src/B2DebugDraw/VisibleRect.cpp
	src/B2DebugDraw/VisibleRect.h
	src/ContactListener.cpp
	src/ContactListener.h
	src/DropController.cpp
	src/DropController.h
	src/DelayedDrop.cpp
	src/DelayedDrop.h
	src/ForceField/Clamper.cpp
	src/ForceField/Clamper.h
	src/ForceField/FieldMixer.cpp
	src/ForceField/FieldMixer.h
	src/ForceField/ForceFieldDebugDraw.cpp
	src/ForceField/ForceFieldDebugDraw.h
	src/ForceField/ForceFieldFactory.cpp
	src/ForceField/ForceFieldFactory.h
	src/ForceField/GridForceField.cpp
	src/ForceField/GridForceField.h
	src/ForceField/IForceField.h
	src/ForceField/StaticForceField.cpp
	src/ForceField/StaticForceField.h
	src/GameCamera.cpp
	src/GameCamera.h
	src/GameScene.cpp
	src/GameScene.h
	src/GameObjects/AnimationObject.cpp
	src/GameObjects/AnimationObject.h
	src/GameObjects/Bomb.cpp
	src/GameObjects/Bomb.h
	src/GameObjects/BridgeColumn.cpp
	src/GameObjects/BridgeColumn.h
	src/GameObjects/Bulb.cpp
	src/GameObjects/Bulb.h
	src/GameObjects/Coin.cpp
	src/GameObjects/Coin.h
	src/GameObjects/CollisionCategory.h
	src/GameObjects/ParticlesObject.cpp
	src/GameObjects/ParticlesObject.h
	src/GameObjects/GameObjectType.h
	src/GameObjects/GameLevelGenerator.cpp
	src/GameObjects/GameLevelGenerator.h
	src/GameObjects/GameObjectComposer.cpp
	src/GameObjects/GameObjectComposer.h
	src/GameObjects/GameObjectFactory.cpp
	src/GameObjects/GameObjectFactory.h
	src/GameObjects/Grass.cpp
	src/GameObjects/Grass.h
	src/GameObjects/GroundStone.cpp
	src/GameObjects/GroundStone.h
	src/GameObjects/IGameLavelInfo.h
	src/GameObjects/IGameObject.h
	src/GameObjects/SimpleGameObject.cpp
	src/GameObjects/SimpleGameObject.h
	src/GameObjects/LightingStone.cpp
	src/GameObjects/LightingStone.h
	src/GameObjects/ObjectThemer.cpp
	src/GameObjects/ObjectThemer.h
	src/GameObjects/WallController.cpp
	src/GameObjects/WallController.h
	src/GameObjects/WallStone.cpp
	src/GameObjects/WallStone.h
	src/GameWorld.cpp
	src/GameWorld.h
	src/GenericScene.cpp
	src/GenericScene.h
	src/GUI/Alignment.h
	src/GUI/BorderdNode.cpp
	src/GUI/BorderdNode.h
	src/GUI/BoxLayout.cpp
	src/GUI/BoxLayout.h
	src/GUI/Button.cpp
	src/GUI/Button.h
	src/GUI/CheckBox.cpp
	src/GUI/CheckBox.h
	src/GUI/ILayout.h
	src/GUI/Image.cpp
	src/GUI/Image.h
	src/GUI/Label.cpp
	src/GUI/Label.h
	src/GUI/Orientation.h
	src/GUI/ScalePolicy.h
	src/GUI/View.cpp
	src/GUI/View.h
	src/GUI/ViewPort.cpp
	src/GUI/ViewPort.h
	src/GUI/ProgressBar.cpp
	src/GUI/ProgressBar.h
	src/GUI/Placer.cpp
	src/GUI/Placer.h
	src/HeadUpDisplay.cpp
	src/HeadUpDisplay.h
	src/Hero/AttackState.cpp
	src/Hero/AttackState.h
	src/Hero/DeadState.cpp
	src/Hero/DeadState.h
	src/Hero/FallState.cpp
	src/Hero/FallState.h
	src/Hero/Hero.cpp
	src/Hero/Hero.h
	src/Hero/HeroData.h
	src/Hero/HeroStateId.h
	src/Hero/IHeroState.h
	src/Hero/JumpState.cpp
	src/Hero/JumpState.h
	src/Hero/RunState.cpp
	src/Hero/RunState.h
	src/IGame.h
	src/IUpdatable.h
	src/MainMenuScene.cpp
	src/MainMenuScene.h
	src/Particles/IParticlesCleaner.h
	src/Particles/IParticlesReplacer.h
	src/Particles/IParticlesUpdater.h
	src/Particles/ISystemUpdater.h
	src/Particles/Particle.cpp
	src/Particles/Particle.h
	src/Particles/ParticlesCleaner.cpp
	src/Particles/ParticlesCleaner.h
	src/Particles/ParticlesFactory.cpp
	src/Particles/ParticlesFactory.h
	src/Particles/ParticlesGenerator.cpp
	src/Particles/ParticlesGenerator.h
	src/Particles/ParticleGeneratorGroup.cpp
	src/Particles/ParticleGeneratorGroup.h
	src/Particles/ParticlesMover.cpp
	src/Particles/ParticlesMover.h
	src/Particles/ParticlesReplacer.cpp
	src/Particles/ParticlesReplacer.h
	src/Particles/ParticlesSystem.cpp
	src/Particles/ParticlesSystem.h
	src/SceneManager.cpp
	src/SceneManager.h
	src/TestScene.cpp
	src/TestScene.h
	src/UpdaterFunc.cpp
	src/UpdaterFunc.h
	src/Utils/b2Utils.cpp
	src/Utils/b2Utils.h
	src/Utils/b2Vec2Operators.h
	src/Utils/Convert.cpp
	src/Utils/Convert.h
	src/Utils/Environment.cpp
	src/Utils/Environment.h
	src/Utils/Forwards.h
	src/Utils/ITimeProvider.h
	src/Utils/MacroCreate.h
	src/Utils/TimeProvider.cpp
	src/Utils/TimeProvider.h
	src/Utils/StrongPtr.h
)

set(includes
	$ENV{COCOS_X_ROOT}/cocos2d-x-3.13.1/cocos/audio/include
	$ENV{COCOS_X_ROOT}/cocos2d-x-3.13.1/external
	$ENV{COCOS_X_ROOT}/cocos2d-x-3.13.1/cocos
	$ENV{COCOS_X_ROOT}/cocos2d-x-3.13.1/external/glfw3/include/mac
	src
)

add_library(GameLib ${sources})
target_include_directories(GameLib PUBLIC ${includes})

foreach(source IN LISTS sources)
    get_filename_component(source_path "${source}" PATH)
    string(REPLACE "/" "\\" file_group "${source_path}")
    source_group("${file_group}" FILES "${source}")
endforeach()